css/js-portfolio-pj.scss
@import "../node_modules/bootstrap/scss/bootstrap";

$jsp-container-ar-tallest: 9/16;
$jsp-container-ar-middle: 99/100;
$jsp-container-ar-widest: 16/9;
$jsp-main-ar: 1;
$jsp-ctrl-ar: 0.4 auto;
// $first-breakpoint: md;
$jsp-ctrl-border-radius: 1rem;

//$darker-danger: rgb(220, 53, 69);
$darker-danger: rgb(55, 13, 17);

//$darker-info: rgb(13, 202, 240);
$darker-info: rgb(3, 51, 60);

html {
    overflow: hidden;
}

body {
    background-color: #080808;
}

// ultra-tall portrait
// portrait units based on viewport width
@media (max-aspect-ratio: $jsp-container-ar-tallest) {
    .jsp-container {
        // limit container to 9/16 tallness
        aspect-ratio: $jsp-container-ar-tallest;
        flex-direction: row;
        width: 100vw;
        max-height: 100vh; // no taller than viewport - unit vh
    }
    .jsp-main {
        height: 100vw;
        width: 100vw;
    }
    .jsp-s, .jsp-e {
        // aspect-ratio: $jsp-ctrl-ar;
        height: 77.777vw;
        width: 50vw;
    }
}

// portrait to square
// portrait units based on viewport width
@media (min-aspect-ratio: $jsp-container-ar-tallest) and (max-aspect-ratio: $jsp-container-ar-middle) {
    .jsp-container {
        // aspect-ratio: 9/16;
        flex-direction: row;
        width: 100vw;
        max-height: 100vh; // no taller than viewport - unit vh
    }
    .jsp-main {
        // allow height to be smaller for near square viewport
        min-height: 80vw;
        max-height: 100vw;
        width: 100vw;
    }
    .jsp-s, .jsp-e {
        // aspect-ratio: $jsp-ctrl-ar;
        min-height: 20vw;
        max-height: 77.777vw;
        width: 50vw;
    }
}

// middle or taller
@media (max-aspect-ratio: $jsp-container-ar-middle) {
    // based on Bootstrap order-bp-n classes
    .jsp-tall-order-0 {
        order: 0 !important;
    }
    .jsp-tall-order-1 {
        order: 1 !important;
    }
    .jsp-tall-order-2 {
        order: 2 !important;
    }
    .jsp-tall-order-3 {
        order: 3 !important;
    }
    .jsp-tall-order-4 {
        order: 4 !important;
    }
}
// middle or wider
@media (min-aspect-ratio: $jsp-container-ar-middle) {
    // based on Bootstrap order-bp-n classes
    .jsp-wide-order-0 {
        order: 0 !important;
    }
    .jsp-wide-order-1 {
        order: 1 !important;
    }
    .jsp-wide-order-2 {
        order: 2 !important;
    }
    .jsp-wide-order-3 {
        order: 3 !important;
    }
    .jsp-wide-order-4 {
        order: 4 !important;
    }

    // center within the viewport when in landscape
    .jsp-viewport {
        align-content: center;
        justify-content: center;
    }
    .jsp-container {
        align-content: center;
        justify-content: center;
    }
}

// square to landscape
// landscape units based on viewport height
@media (min-aspect-ratio: $jsp-container-ar-middle) and (max-aspect-ratio: $jsp-container-ar-widest) {
    .jsp-container {
        // aspect-ratio: 16/9;
        flex-direction: column;
        height: 100vh;
        max-width: 100vw; // no wider than viewport - unit vw
    }
    .jsp-main {
        // allow width to be smaller for near square viewport
        height: 100vh;
        min-width: 80vh;
        max-width: 100vh;
        
    }
    .jsp-s, .jsp-e {
        // aspect-ratio: $jsp-ctrl-ar;
        height: 100vh;
        // width: 28vw;
        max-width: 21.875vh;
    }
}

// ultra-wide landscape
// landscape units based on viewport height
@media (min-aspect-ratio: $jsp-container-ar-widest) {
    .jsp-container {
        // limit container to 16/9 wideness
        aspect-ratio: $jsp-container-ar-widest;
        flex-direction: column;
        height: 100vh;
        max-width: 100vw; // no wider than viewport - unit vw
    }
    .jsp-main {
        height: 100vh;
        width: 100vh; 
    }
    .jsp-s, .jsp-e {
        // aspect-ratio: $jsp-ctrl-ar;
        height: 100vh;
        width: 21.875vh;
    }
}

// always

.jsp-main {
    // aspect-ratio: $jsp-main-ar;
    border: 2px white;
}

// .jsp-s, .jsp-e {
//     aspect-ratio: $jsp-ctrl-ar;
// }

.jsp-s {
    background-color: $darker-danger;
    border-top-left-radius: $jsp-ctrl-border-radius;
    border-bottom-left-radius: $jsp-ctrl-border-radius;
}

.jsp-e {
    background-color: $darker-info;
    border-top-right-radius: $jsp-ctrl-border-radius;
    border-bottom-right-radius: $jsp-ctrl-border-radius;
    align-self: flex-end;
}

.jsp-square {
    aspect-ratio: 1;
}

.jsp-center {
    // vertical-align: middle;
    // padding: 2.0rem;
    padding: 0;
}

.jsp-ctrl-btn {
    height: 80%;
    width: 80%;
    text-shadow: 0px 2px 8px darkgray;
}

// .jsp-ctrl-text {
//     text-shadow: 0px 2px 8px black;
// }

